--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -152,9 +152,18 @@
 
 @font-face {
   font-family: 'American Typewriter';
-  src: url('/American Typewriter Regular') format('truetype');
+  src: url('/American Typewriter Regular/American Typewriter Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'American Typewriter';
+  src: url('/American Typewriter Regular/ITC American Typewriter Medium.otf') format('opentype');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
