--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -18582,3 +18582,11 @@ html {
     opacity: 0;
   }
 }
+
+
+.scrollbar-hide {
+  scrollbar-width: none;
+}
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
